--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build": "webpack -d --watch"
   },
   "dependencies": {
-    "babel-core": "6.24.1",
     "babel-plugin-react": "1.0.0",
     "babel-preset-react": "6.24.1",
     "bootstrap": "^4.0.0-alpha.2",
     "enzyme-redux": "^0.1.7",
+    "i": "^0.3.6",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
+    "package.json": "^2.0.1",
     "popper.js": "^1.12.9",
     "react": "^15.6.1",
     "react-dom": "^15.4.2",
@@ -28,8 +29,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-core": "6.24.1",
-    "babel-loader": "7.0.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "6.24.1",
@@ -43,6 +44,6 @@
     "redux-test-utils": "0.1.2",
     "sinon": "1.15.4",
     "uglifyjs-webpack-plugin": "0.4.3",
-    "webpack": "2.6.1"
+    "webpack": "^2.6.1"
   }
 }
